# GEGLB_aging_drug_redo

./: .gitignore  README.md  TODO.md  pyproject.toml
code/: README.md
code/checks/: README.md
code/experiments/: README.md
data/: README.md
data/raw/: README.md
data_sources/: data_requests.md  dataset_manifest.md  tissue_aging_sources.md
docs/: repro_audit.md
latex/: README.md  macros.tex  main.tex  references.bib  sharp_methods_algorithmic_plan.tex
math/: README.md  claims.md  definitions.md  examples.md  open_questions.md  proof_sketches.md
notes/: Project_outline.md  README.md  reading_list.md  research_log.md  research_plan.md
scripts/: download_data.py
sources/: README.md  source_notes.md
sources/pdfs/: README.md
sources/upstream/: README.md
src/scoring/: __init__.py  page.py
src/sharp_baseline/: __init__.py  io.py
tests/: test_io.py  test_page.py
